--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,1 +1,41 @@
 <h1>Estoy en el RealTimeProducts</h1>
+
+<script src="socket.io/socket.io.js"></script>
+<script>
+    const socket = io();
+
+    socket.on('product-message', ({ socketId, message }) => {
+        Swal.fire(message);
+    });
+
+
+    /*const messageList = document.getElementById('message-list');
+    const messageInput = document.getElementById('message-input');
+    const sendButton = document.getElementById('send-button');
+
+    // Función para agregar un mensaje al DOM
+    function addMessage(socketId, message) {
+        const listItem = document.createElement('li');
+        listItem.textContent = `${socketId}: ${message}`;
+        messageList.appendChild(listItem);
+    }
+
+    // Escucha eventos 'message' y actualiza la lista de mensajes
+    socket.on('product', ({ socketId, message }) => {
+        addMessage(socketId, message);
+    });
+
+    // Escucha el evento 'messages' inicial para cargar los mensajes existentes
+    socket.on('products', (initialMessages) => {
+        initialMessages.forEach(({ socketId, message }) => {
+            addMessage(socketId, message);
+        });
+    });
+
+    // Enviar mensaje cuando se hace clic en el botón
+    sendButton.addEventListener('click', () => {
+        const message = messageInput.value;
+        socket.emit('product', message);
+        messageInput.value = '';
+    });*/
+</script>
