--- a/src/views/partials/tableProducts.handlebars
+++ b/src/views/partials/tableProducts.handlebars
@@ -1,7 +1,7 @@
 <table id="tableProducts" class="table">
     <thead>
         <tr>
-            <th scope="col" data-field="id">ID</th>
+            <th scope="col" data-field="_id">ID</th>
             <th scope="col" data-field="title">Tittle</th>
             <th scope="col" data-field="description">Decription</th>
             <th scope="col" data-field="code">Code</th>
@@ -15,7 +15,7 @@
     <tbody id="tableProductsBody">
         {{#each products}}
             <tr>
-                <td>{{this.id}}</td>
+                <td>{{this._id}}</td>
                 <td>{{this.title}}</td>
                 <td>{{this.description}}</td>
                 <td>{{this.code}}</td>
