--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,4 +1,4 @@
-{{> tableProducts products=products }}
+{{> tableProducts }}
 <script src="socket.io/socket.io.js"></script>
 <script>
     const socket = io();
