--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -12,8 +12,18 @@
                         <a class="nav-link" aria-current="page" href="{{this.url}}">{{this.title}}</a>
                     </li>
                 {{/each}}
-
+                <li class="nav-item">
+                    <a id="cart-link" class="nav-link" aria-current="page" href="">Cart</a>
+                </li>
             </ul>
         </div>
     </div>
 </nav>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const cartLink = document.getElementById('cart-link');
+        const cartValue = localStorage.getItem("cart");
+        cartLink.href = "carts/" + cartValue;
+    });
+
+</script>
