--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  {{>header isActive=isActive pages=pages}}
+  {{>header isActive=isActive pages=pages user=user}}
   <main class="container">
     <h1>{{myPage.title}}</h1>
     {{{body}}}
