--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -17,6 +17,16 @@
                 </li>
             </ul>
         </div>
+        <div class="col-md-3 text-end">
+            {{#if user}}
+                <a href="/profile/{{user.id}}"><span class="me-2">Hola {{user.first_name}}</span></a>
+                <a type="button" class="btn btn-outline-primary me-2" href="/logout">Logout</a>
+            {{else}}
+                <a type="button" class="btn btn-outline-primary me-2" href="/login">Iniciar</a>
+                <a type="button" class="btn btn-primary" href="/register">Registrar</a>
+            {{/if}}
+
+        </div>
     </div>
 </nav>
 <script>
