--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -9,3 +9,6 @@
     </div>
     <button type="submit" class="btn btn-primary">Iniciar sesión</button>
 </form>
+<form action="/api/sessions/github" method="post">
+    <button type="submit" class="btn btn-dark">Iniciar sesión con Github</button>
+</form>
