--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -19,7 +19,7 @@
         </div>
         <div class="col-md-3 text-end">
             {{#if user}}
-                <a href="/profile/{{user.id}}"><span class="me-2">Hola {{user.first_name}}</span></a>
+                <a href="/profile"><span class="me-2">Hola {{user.first_name}}</span></a>
                 <a type="button" class="btn btn-outline-primary me-2" href="/logout">Logout</a>
             {{else}}
                 <a type="button" class="btn btn-outline-primary me-2" href="/login">Iniciar</a>
