--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,7 +1,7 @@
 <h2>Perfil</h2>
 {{#if user}}
     <h5>ID</h5>
-    <p>{{user.id}}</p>
+    <p>{{user._id}}</p>
     <h5>Email</h5>
     <p>{{user.email}}</p>
     <h5>Nombre</h5>
