fix button purchase

--- a/src/views/cartDetail.handlebars
+++ b/src/views/cartDetail.handlebars
@@ -1,2 +1,2 @@
 {{> tableCart products=cart.products}}
-<a href="#link" class="btn btn-primary" role="button">Pagar</a>
+<a href="/carts/{{cart._id}}/purchase" class="btn btn-primary" role="button">Pagar</a>
