--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -36,7 +36,7 @@
     document.addEventListener("DOMContentLoaded", function () {
         const cartLink = document.getElementById('cart-link');
         const cartValue = localStorage.getItem("cart");
-        cartLink.href = "carts/" + cartValue;
+        cartLink.href = "/carts/" + cartValue;
     });
 
 </script>
