--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -12,3 +12,4 @@
 <form action="/api/sessions/github" method="post">
     <button type="submit" class="btn btn-dark">Iniciar sesión con Github</button>
 </form>
+<button class="btn btn-success" onclick="forgotPassword()">Olvide contraseña</button>
