--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -8,8 +8,8 @@
     <p>{{user.first_name}}</p>
     <h5>Apellido</h5>
     <p>{{user.last_name}}</p>
-    <h5>Nacimiento</h5>
-    <p>{{user.birth_date}}</p>
+    <h5>Edad</h5>
+    <p>{{user.age}}</p>
     <h5>Rol</h5>
     <p>{{user.role}}</p>
 {{/if}}
