--- a/src/views/cartDetail.handlebars
+++ b/src/views/cartDetail.handlebars
@@ -1,37 +1,8 @@
 {{> tableCart products=cart.products}}
-<button class="btn btn-primary" onclick=actionPay()>Pagar</button>
+<button class="btn btn-primary" onclick=actionGoToPay()>Pagar</button>
 
 <script>
-    function actionPay() {
-        Swal.fire({
-            title: 'Deseas pagar?',
-            showCancelButton: true,
-            confirmButtonText: 'Pagar',
-            showLoaderOnConfirm: true,
-            preConfirm: () => {
-                return fetch(`/api/carts/657f5f16daab2f9d322f2fe1/purchase`)
-                    .then(response => {
-                        if (!response.ok) {
-                            throw new Error(response.statusText)
-                        }
-                        return response.json()
-                    })
-                    .catch(error => {
-                        Swal.showValidationMessage(
-                            `Request failed: ${error}`
-                        )
-                    })
-            },
-            allowOutsideClick: () => !Swal.isLoading()
-        }).then((result) => {
-            if (result.isConfirmed) {
-                Swal.fire(
-                    'Pago Realizado',
-                    JSON.stringify(result.value.payload),
-                    'success'
-                )
-
-            }
-        })
+    function actionGoToPay() {
+        window.location = "/carts/{{user.cart}}/purchase";
     }
 </script>
