--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <!-- SweetAlert2 11.1.9 -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://sdk.mercadopago.com/js/v2"></script>
 
   <title>{{myPage.title}}</title>
 </head>
@@ -65,9 +66,9 @@
       }
     });*/
 
-    /*function handleCartIconClick(id) {
+    function handleCartIconClick(id) {
       const cart = localStorage.getItem("cart");
-      fetch(`/api/carts/${cart}/product/${id}`, {
+      fetch(`/api/carts/{{user.cart}}/product/${id}`, {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
@@ -84,7 +85,7 @@
           console.error(err);
           Swal.fire('Error al agregar producto al carrito')
         });
-    }*/
+    }
 
     function forgotPassword() {
       const email = document.getElementById('inputEmail').value;
