--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -16,6 +16,9 @@
                 <li class="nav-item">
                     <a id="cart-link" class="nav-link" aria-current="page" href="/carts/{{user.cart}}">Cart</a>
                 </li>
+                <li class="nav-item">
+                    <a id="cart-link" class="nav-link" aria-current="page" href="/tickets">Tickets</a>
+                </li>
                 {{/if}}
 
             </ul>
